[Aditya] - Added authorization to Note Rest APIs in swagger
