# swagger.yaml
@@ -1,11 +1,3 @@
-# 1) Define the security scheme type (HTTP bearer)
-securityDefinitions:
-    BearerAuth:            # arbitrary name for the security scheme
-      type: bearer
-      # scheme: bearer
-      bearerFormat: JWT
-          # optional, arbitrary value for documentation purposes
-
 swagger: "2.0"
 info:
   title: "Notes API"
@@ -130,9 +122,13 @@ paths:
     post:
       tags: [Note Actions]
       summary: "Let's you add a Note"
-      security:
-        - BearerAuth: []
       parameters:
+        - in: header
+          name: x-access-token
+          schema:
+            type: string
+            format: uuid
+          required: true
         - in: body
           name: "New Note"
           description: "Add a note once the user is Logged in the Application"
@@ -150,8 +146,13 @@ paths:
     get:
       tags: [Note Actions]
       summary: "Returns all the Notes."
-      security:
-        - BearerAuth: []
+      parameters:
+        - in: header
+          name: x-access-token
+          schema:
+            type: string
+            format: uuid
+          required: true
       description: "Returns the list of stored Notes in the form of Objects."
       produces:
         - application/json
@@ -166,9 +167,13 @@ paths:
     delete:
       tags: [Note Actions]
       summary: "Let's you delete the selected Note"
-      security:
-        - BearerAuth: []
       parameters:
+        - in: header
+          name: x-access-token
+          schema:
+            type: string
+            format: uuid
+          required: true
         - name: id
           in: path
           description: "Deletes the note."
@@ -185,9 +190,13 @@ paths:
     patch:
       tags: [Note Actions]
       summary: "Let's you edit the selected Note"
-      security:
-        - BearerAuth: []
       parameters:
+        - in: header
+          name: x-access-token
+          schema:
+            type: string
+            format: uuid
+          required: true
         - name: id
           in: path
           description: ID of the Object
@@ -211,9 +220,13 @@ paths:
     patch:
       tags: [Note Actions]
       summary: "Let's you archive the selected Note"
-      security:
-        - BearerAuth: []
       parameters:
+        - in: header
+          name: x-access-token
+          schema:
+            type: string
+            format: uuid
+          required: true
         - name: id
           in: path
           description: ID of the Object
@@ -231,8 +244,13 @@ paths:
     get:
       tags: [Note Actions]
       summary: "Returns all the Archived Notes."
-      security:
-        - BearerAuth: []
+      parameters:
+        - in: header
+          name: x-access-token
+          schema:
+            type: string
+            format: uuid
+          required: true
       description: "Returns the list of stored Archived Notes in the form of Objects."
       produces:
         - application/json
@@ -247,8 +265,13 @@ paths:
     get:
       tags: [Note Actions]
       summary: "Returns all the Deleted Notes."
-      security:
-        - BearerAuth: []
+      parameters:
+        - in: header
+          name: x-access-token
+          schema:
+            type: string
+            format: uuid
+          required: true
       description: "Returns the list of deleted Archived Notes in the form of Objects."
       produces:
         - application/json
